@@ -950,6 +950,18 @@
                   </div>
                 </div>
               </div>
+
+              <div class="card-wrapper">
+                <div class="card text-center">
+                  <img class="card-img-top" src="/img/reviews/PeanutMaster.png" alt="PeanutMaster"/>
+                  <div class="card-body">
+                    <h3>PeanutMaster</h3>
+                    <p class="card-text">
+                      I love this site so many games to play!
+                    </p>
+                  </div>
+                </div>
+              </div>
             </div>
           </div>
         </div>
